# tech-challenge1-g27

./: .gitignore  README.md  app.py  exemploRotasProducao.py  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt
.github/instructions/: instructions.instructions.md  progress_tracker.md
app/: __init__.py
app/auth/: __init__.py  jwt_manager.py
app/controllers/: __init__.py  auth_controller.py  comercializacao_controller.py  exportacao_controller.py  importacao_controller.py  processamento_controller.py  producao_controller.py
app/models/: __init__.py  user.py
app/routes/: __init__.py  auth_routes.py  comercializacao_routes.py  exportacao_routes.py  importacao_routes.py  main_routes.py  processamento_routes.py  producao_routes.py
app/services/: __init__.py  comercializacao_service.py  exportacao_service.py  importacao_service.py  processamento_service.py  producao_service.py
app/utils/: __init__.py  config.py  csv_utils.py  exportacao_csv_utils.py  importacao_csv_utils.py  parse_utils.py  processamento_csv_utils.py  swagger_config.py
collection-postman/: POSTMAN_COLLECTION_SUMMARY.md  POSTMAN_GUIDE.md  postman_collection.json  readme-post-Collection.md
db/: bigquery_client.py  database.py  models.py
exemplo_retorno_html/: html_processamento_subopt_01.html  html_processamento_subopt_02.html
scraper/: constants.py  download.py
static_data/: comercializacao.csv
