[project]
name = "tech-challenge1-g27"
version = "0.1.0"
description = "Primeira tech challenge do grupo G27, com objetivo de criar uma API para consultar dados da EMBRAPA para alimentar uma base de dados que futuramente será usada para um modelo de Machine Learning"
authors = [
    {name = "Victor Santos",email = "vlsoexecutivo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "aiohttp (>=3.11.16,<4.0.0)",
    "google-cloud-bigquery (>=3.31.0,<4.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
